methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:16: error: '<-' expected but ')' found.
    for(i<1 to 14){
                 ^PictureMono2:22: error: illegal start of simple expression
  }}
  ^